[tool.poetry]
name = "ppt2pdf"
version = "0.1.0"
description = ""
authors = ["AHpx-Lap <ahpx@yandex.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
